# timbre-morpher

./: .gitignore  README.md  pyproject.toml
examples/: basic_morph.py  test_dac.py  test_encodec.py  test_music2latent.py  test_rave.py  test_stable_audio.py  visualization_demo.py
scripts/: morph.py
src/timbre_morpher/: __init__.py
src/timbre_morpher/core/: __init__.py  interpolator.py  morpher.py
src/timbre_morpher/evaluation/: metrics.py
src/timbre_morpher/models/: __init__.py  base.py  dac_wrapper.py  encodec_wrapper.py  music2latent_wrapper.py  rave_wrapper.py  stable_audio_wrapper.py
src/timbre_morpher/utils/: __init__.py  audio.py  visualization.py
tests/: __init__.py  test_audio.py  test_dac_wrapper.py  test_interpolator.py  test_music2latent_wrapper.py  test_stable_audio_wrapper.py
